docs: Adding documentation on sellers entity
